--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>friends - kokoa talk</title>
+    <title>chats - kokoa talk</title>
     <script
       src="https://kit.fontawesome.com/3610fcffbc.js"
       crossorigin="anonymous"
@@ -27,56 +27,39 @@
       </div>
     </div>
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
 
       </div>
     </header>
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i> friends' Names Display
-      <i class="fab fa-chevron-right fa-xs"></i>
-    </a>
-    <main class="friend-screen">
+ 
+    <main class="main-screen">
       <div class="user-copmonent">
         <div class="user-component__column">
-          <img src="https://i.pinimg.com/564x/69/d7/2f/69d72f1cd0b44b3f07fb83a1e7acb3da.jpg" class="user-component__avatar user-component__avatar--xl"/>
+          <img src="https://i.pinimg.com/564x/cd/b3/40/cdb340365ce0a75464bbd75db843acfa.jpg" class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
-            <h4 class="user-component__title">또여미</h4>
-          <!-- <h6 class="user-component__subtitle">SKZ 사랑둥이를 담당하고 있슴돠~</h6> -->
-          </div>
-        </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-hader">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-      </div> 
-      <div class="user-copmonent">
-        <div class="user-component__column">
-          <img src="https://play-lh.googleusercontent.com/cf3DwPLbS8Z55sDvUSTQ6PL1goPdm8KbZ81g4TEUAaeUh5LDhkzdjxKQ2RX6BGpv0x4" class="user-component__avatar user-component__avatar--sm"/>
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title--not-bold">channel</h4>
+            <h4 class="user-component__title">지졍</h4>
+          <h6 class="user-component__subtitle">나도 오늘은 빨리 끝나서 기분 좋아짐 ㅎㅎ 이제 밥먹어야겠다</h6>
           </div>
         </div>
         <div class="user-component__column">
-          <div><span>2</span>
-          <i class="fas fa-chevron-right fa-xs"></i></div>
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
         </div>
       </div>
     </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-user fa-2x"></i></a>
+          <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-          <span class="nav_notification badge">1</span><i class="far fa-comment fa-2x"></i></a>
+        <span class="nav_notification badge">1</span><i class="fas fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
