--- a/chats.html
+++ b/chats.html
@@ -12,6 +12,9 @@
     ></script>
   </head>
   <body>
+        <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
@@ -38,12 +41,13 @@
     </header>
  
     <main class="main-screen">
+      <a href="chat.html">
       <div class="user-copmonent">
         <div class="user-component__column">
           <img src="https://i.pinimg.com/564x/cd/b3/40/cdb340365ce0a75464bbd75db843acfa.jpg" class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
             <h4 class="user-component__title">지졍</h4>
-          <h6 class="user-component__subtitle">나도 오늘은 빨리 끝나서 기분 좋아짐 ㅎㅎ 이제 밥먹어야겠다</h6>
+          <h6 class="user-component__subtitle">나도 오늘은 빨리 끝나서 기분 좋아짐 ㅎㅎ</h6>
           </div>
         </div>
         <div class="user-component__column">
@@ -51,6 +55,7 @@
             <div class="badge">1</div>
         </div>
       </div>
+    </a> 
     </main>
     <nav class="nav">
       <ul class="nav__list">
@@ -69,5 +74,7 @@
             ><i class="fas fa-ellipsis-h fa-2x"></i>
       </ul>
     </nav>
+
+
   </body>
 </html>
