--- a/find.html
+++ b/find.html
@@ -12,6 +12,9 @@
     ></script>
   </head>
   <body>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
@@ -39,20 +42,20 @@
     </header>
     <!-- 메인 -->
     <main class="main-screen">
-      <div class="find-icons">
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <div class="icon-row__icon">
             <i class="fas fa-qrcode"></i>
             <span>QR Code</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
             <i class="far fa-address-book"></i>
             <span>Contacts</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
             <i class="fas fa-fingerprint"></i>
             <span>Add by ID</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
             <i class="far fa-envelope"></i>
             <span>Invite</span>
         </div>
@@ -106,5 +109,7 @@
             ><i class="fas fa-ellipsis-h fa-2x"></i>
       </ul>
     </nav>
+
+
   </body>
 </html>
