--- a/friends.html
+++ b/friends.html
@@ -12,6 +12,12 @@
     ></script>
   </head>
   <body>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
@@ -86,5 +92,7 @@
             ><i class="fas fa-ellipsis-h fa-2x"></i>
       </ul>
     </nav>
+
+   
   </body>
 </html>
