--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     ></script>
   </head>
   <body>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
