--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
 
   <body id="chat-screen">
     <div id="no-mobile">
-      <span>Your screen is super big ㅠㅠ</span>
+      <span>Your screen is super big 😅 ㅠㅠ</span>
     </div>
     <!-- 상태바 -->
     <div class="status-bar">
